--- a/src/main/resources/templates/comunicazione/comunicazioneShow.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneShow.html
@@ -134,10 +134,10 @@
 												</th:block>
 												<br/>
 												<strong th:text="#{label.ambito}"></strong>
-												<span th:text="${comunicazioneWrapper.comunicazione.ambito}"></span>
+												<span th:text="${comunicazioneWrapper.comunicazione.ambito.nome}"></span>
 												<br/>
 												<strong th:text="#{label.tipologia}"></strong>
-												<span th:text="${comunicazioneWrapper.comunicazione.tipologia}"></span>
+												<span th:text="${comunicazioneWrapper.comunicazione.tipologia.nome}"></span>
 											</div>
 										</div>
 									</div>
