--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -910,6 +910,7 @@ h2 {
 .comunicazione-testo {
 	min-height: 350px;
 	resize: none;
+	margin-bottom: 20px;
 }
 
 .fixed-value {
@@ -1057,4 +1058,3 @@ tr.integrazione-eliminazione td:first-child a{
 .nav.navbar-nav.navbar-right > li:hover {
 	background-color: rgba(115, 135, 156, 0.1);
 }
-
