--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -9,6 +9,28 @@
 		<div class="row">
 			<div class="col-xs-12">
 
+				<!-- modale showPianoFormativoAll -->
+				<div id="showPianoAll-modal" class="modal fade modal-showPianoAll"
+					data-model-index="1" role="dialog">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal">
+									<span aria-hidden="true">×</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel"
+									th:text="#{label.riepilogo_piano_formativo}">Riepilogo piano formativo</h4>
+							</div>
+							<div class="modal-body">
+
+								<!-- fragment show all -->
+								<th:block th:include="pianoFormativo/pianoFormativoShowAll :: showAll"></th:block>
+
+							</div>
+						</div>
+					</div>
+				</div>
+
 				<!-- modale showAll -->
 				<div id="showAll-modal" class="modal fade modal-showAll"
 					data-model-index="1" role="dialog">
@@ -97,11 +119,9 @@
 					<div class="x_title x_menu">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<div class="dropdown pull-right">
-								<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/runtimeTest|}" type="button" class="btn btn-primary pull-right">RunTimeTest</a>
-								<a class="btn btn-primary ajaxCallShowAll" th:text="#{label.mostra_riepilogo}" data-toggle="modal" data-target=".modal-showAll"></a>
-  								<a class="btn btn-primary ajaxCallShowAllValutazioni" th:text="#{label.mostra_riepilogo_valutazioni}" data-toggle="modal" data-target=".modal-showAllValutazioni" th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" type="button"></a>
+							<a th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/runtimeTest|}" type="button" class="btn btn-primary">RunTimeTest</a>
 
+							<div class="dropdown pull-right">
   								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown" th:if="${#authentication.principal.isSegreteria()}">
 									<span th:text="#{label.menu_azioni}"></span>
 									<span class="caret"></span>
@@ -112,24 +132,38 @@
 									<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canShowValutazione}" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
-									<li class="divider actions"></li>
+									<li class="divider actions" th:if="${accreditamentoWrapper.canEnableField or accreditamentoWrapper.canPrendiInCarica or accreditamentoWrapper.canPresaVisione or accreditamentoWrapper.canAssegnaNuovoGruppo}"></li>
 									<li><a th:if="${accreditamentoWrapper.canEnableField}" th:text="#{label.abilita_id_editabili}" onclick="switchMode('enableField')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/takeCharge|}" th:text="#{label.prendi_in_carica}"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canPresaVisione}" th:text="#{label.presa_visione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/presaVisione|}"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" th:text="#{label.assegna_nuovo_gruppo}" data-toggle="modal" data-target=".modal-reassign"></a></li>
 								</ul>
-								<!-- menù a pulsanti separati per il provider -->
-								<th:block th:if="${#authentication.principal.isProvider()}">
-									<a th:if="${accreditamentoWrapper.accreditamento.isBozza() or
-										accreditamentoWrapper.accreditamento.isIntegrazione() or
-										accreditamentoWrapper.accreditamento.isPreavvisoRigetto()}" class="btn btn-success" th:text="#{label.modifica}" onclick="switchMode('edit')"></a>
-								</th:block>
-								<!-- menù a pulsanti separati per il referee -->
-								<th:block th:if="${#authentication.principal.isReferee()}">
-									<a th:if="${accreditamentoWrapper.canValutaDomanda}" class="btn btn-success" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a>
-									<a th:if="${accreditamentoWrapper.canShowValutazione}" class="btn btn-success" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a>
-								</th:block>
 							</div>
+
+							<div class="dropdown pull-right">
+								<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+									<span th:text="#{label.menu_riepiloghi}"></span>
+									<span class="caret"></span>
+								</button>
+								<!-- menù raggruppato per segreteria -->
+								<ul class="dropdown-menu actions">
+									<li><a class="ajaxCallShowAll" th:text="#{label.mostra_riepilogo}" data-toggle="modal" data-target=".modal-showAll"></a></li>
+  									<li><a class="ajaxCallShowAllValutazioni" th:text="#{label.mostra_riepilogo_valutazioni}" data-toggle="modal" data-target=".modal-showAllValutazioni" th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" type="button"></a></li>
+  									<li><a class="ajaxCallShowAllPiano" th:text="#{label.mostra_riepilogo_piano_formativo}" data-toggle="modal" data-target=".modal-showPianoAll"></a></li>
+								</ul>
+							</div>
+
+							<!-- menù a pulsanti separati per il provider -->
+							<th:block th:if="${#authentication.principal.isProvider()}">
+								<a th:if="${accreditamentoWrapper.accreditamento.isBozza() or
+									accreditamentoWrapper.accreditamento.isIntegrazione() or
+									accreditamentoWrapper.accreditamento.isPreavvisoRigetto()}" class="btn btn-success" th:text="#{label.modifica}" onclick="switchMode('edit')"></a>
+							</th:block>
+							<!-- menù a pulsanti separati per il referee -->
+							<th:block th:if="${#authentication.principal.isReferee()}">
+								<a th:if="${accreditamentoWrapper.canValutaDomanda}" class="btn btn-success" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a>
+								<a th:if="${accreditamentoWrapper.canShowValutazione}" class="btn btn-success" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a>
+							</th:block>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -175,6 +209,7 @@
 
 				$('.ajaxCallShowAll').one("click", populateShowAll);
 				$('.ajaxCallShowAllValutazioni').one("click", populateShowAllValutazioni);
+				$('.ajaxCallShowAllPiano').one("click", populateShowAllPiano);
 
 			/*]]>*/
 			</script>
