--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -160,28 +160,34 @@
 					<div class="x_title x_menu">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<button type="button" class="btn btn-primary" th:text="#{label.torna_in_visualizzazione}" onclick="switchMode('show')"></button>
-							<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown"  th:if="${#authentication.principal.hasProfile('SEGRETERIA') or #authentication.principal.hasProfile('REFEREE')}">
-								<span th:text="#{label.menu_azioni}"></span>
-								<span class="caret"></span>
-							</button>
-							<!-- menù raggruppato per segreteria -->
-							<ul class="dropdown-menu actions">
-								<!-- mostra showAll -->
-								<li><a class="ajaxCallShowAll"
-									th:text="#{label.mostra_riepilogo}"
-									data-toggle="modal" data-target=".modal-showAll"></a></li>
-								<!-- mostra showAllValutazioni -->
-								<li><a class="ajaxCallShowAllValutazioni"
-									th:text="#{label.mostra_riepilogo_valutazioni}"  data-toggle="modal" data-target=".modal-showAllValutazioni"></a></li>
-								<li class="divider actions"></li>
-								<li><a th:if="${accreditamentoWrapper.canConfermaValutazione}"
-									th:text="#{label.conferma_valutazione}" data-toggle="modal" data-target=".modal-confirm"></a></li>
-								<th:block th:if="${accreditamentoWrapper.canPresaVisione}">
-									<li><a th:text="#{label.presa_visione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/presaVisione|}"></a></li>
-									<li><a th:text="#{label.rivaluta}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/rivaluta|}"></a></li>
-								</th:block>
-							</ul>
+							<div class="dropdown pull-right">
+								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown"  th:if="${#authentication.principal.hasProfile('SEGRETERIA') or #authentication.principal.hasProfile('REFEREE')}">
+									<span th:text="#{label.menu_azioni}"></span>
+									<span class="caret"></span>
+								</button>
+								<!-- menù raggruppato per segreteria -->
+								<ul class="dropdown-menu actions">
+									<li><a th:if="${accreditamentoWrapper.canConfermaValutazione}"
+										th:text="#{label.conferma_valutazione}" data-toggle="modal" data-target=".modal-confirm"></a></li>
+									<th:block th:if="${accreditamentoWrapper.canPresaVisione}">
+										<li><a th:text="#{label.presa_visione}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/presaVisione|}"></a></li>
+										<li><a th:text="#{label.rivaluta}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/rivaluta|}"></a></li>
+									</th:block>
+									<li class="divider actions" th:if="${accreditamentoWrapper.canConfermaValutazione or accreditamentoWrapper.canPresaVisione}"></li>
+									<li><a th:text="#{label.torna_in_visualizzazione}" onclick="switchMode('show')"></a></li>
+								</ul>
+							</div>
+							<div class="dropdown pull-right">
+								<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+									<span th:text="#{label.menu_riepiloghi}"></span>
+									<span class="caret"></span>
+								</button>
+								<!-- menù raggruppato per segreteria -->
+								<ul class="dropdown-menu actions">
+									<li><a class="ajaxCallShowAll" th:text="#{label.mostra_riepilogo}" data-toggle="modal" data-target=".modal-showAll"></a></li>
+  									<li><a class="ajaxCallShowAllValutazioni" th:text="#{label.mostra_riepilogo_valutazioni}" data-toggle="modal" data-target=".modal-showAllValutazioni" type="button"></a></li>
+								</ul>
+							</div>
 						</div>
 						<div class="clearfix"></div>
 					</div>
