non è più necessaria la valutazione del piano formativo e fix vari:
-valutazione non più necessaria e commentate parti relative nel fragment
dello show all valutazione, nel controller e nel wrapper di
accreditamento.
-fix al validatori di datiAccreditamento che non controllava le
discipline
-fix al template di allegati edit e alla enum per l'ordine che
corrisponda alla modifica richiesta (aggiornata solo sul
accreditamentoFragment e non su datiAccreditamentoFragment)
-fix al valuta domanda e mostra valutazione che comparivano
contemporaneamente

--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -34,7 +34,7 @@
 								Allegati
 							</a>
 						</li>
-						<li role="presentation" class="presentation">
+						<li th:unless="${valutabile}" role="presentation" class="presentation">
 							<a href="#tab_content4" role="tab" id="tab4" data-toggle="tab" aria-expanded="false" th:text="#{label.piano_formativo}">
 								Piano Formativo
 							</a>
