--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -130,7 +130,7 @@
 								<ul class="dropdown-menu actions">
 									<!-- <li><a th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" type="button" class="ajaxCallShowAllValutazioni" th:text="#{label.mostra_riepilogo_valutazioni}" data-toggle="modal" data-target=".modal-showAllValutazioni"></a></li> -->
 									<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
-									<li><a th:if="${accreditamentoWrapper.canShowValutazione}" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canShowValutazione and !accreditamentoWrapper.canValutaDomanda}" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
 									<li class="divider actions" th:if="${accreditamentoWrapper.canEnableField or accreditamentoWrapper.canPrendiInCarica or accreditamentoWrapper.canPresaVisione or accreditamentoWrapper.canAssegnaNuovoGruppo}"></li>
 									<li><a th:if="${accreditamentoWrapper.canEnableField}" th:text="#{label.abilita_id_editabili}" onclick="switchMode('enableField')"></a></li>
@@ -162,7 +162,7 @@
 							<!-- menù a pulsanti separati per il referee -->
 							<th:block th:if="${#authentication.principal.isReferee()}">
 								<a th:if="${accreditamentoWrapper.canValutaDomanda}" class="btn btn-success" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a>
-								<a th:if="${accreditamentoWrapper.canShowValutazione}" class="btn btn-success" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a>
+								<a th:if="${accreditamentoWrapper.canShowValutazione and !accreditamentoWrapper.canValutaDomanda}" class="btn btn-success" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a>
 							</th:block>
 						</div>
 						<div class="clearfix"></div>
