--- a/src/main/resources/templates/valutazione/valutazioneShowAll.html
+++ b/src/main/resources/templates/valutazione/valutazioneShowAll.html
@@ -177,22 +177,23 @@
 				</div>
 
 				<!-- riempito con ciclo di chiamate ajax per gli eventi del piano formativo -->
-				<div class="x_panel">
-              		<div class="x_title">
-						<h2 style="display: inline" th:text="#{label.eventi_piano_formativo}">label.eventi_piano_formativo</h2>
-						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2>
-						<div class="clearfix"></div>
-					</div>
+				<!-- //TODO rimuovere se confermato non serve più -->
+<!-- 				<div class="x_panel"> -->
+<!--               		<div class="x_title"> -->
+<!-- 						<h2 style="display: inline" th:text="#{label.eventi_piano_formativo}">label.eventi_piano_formativo</h2> -->
+<!-- 						<h2 style="display: inline" th:if="${#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo?.eventi)}" class="red-italic" th:text="#{label.dati_non_inseriti}">label.dati_non_inseriti</h2> -->
+<!-- 						<div class="clearfix"></div> -->
+<!-- 					</div> -->
 
-					<th:block th:if="${accreditamentoWrapper.accreditamento.pianoFormativo != null and !#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo.eventi)}">
-						<th:block th:each="evento, row : ${accreditamentoWrapper.accreditamento.pianoFormativo.eventi}">
-							<h2 th:text="#{label.evento} + ': ' + ${evento.titolo}">label.componente_comitato</h2>
-							<div th:unless="${row.last}" class="divider-dashed"></div>
-							<div th:id="evento+${evento.id}+BlockValidate"  role="iterEventoValutazione" th:attr="data-valore-id=${evento.id}"></div>
-						</th:block>
-					</th:block>
+<!-- 					<th:block th:if="${accreditamentoWrapper.accreditamento.pianoFormativo != null and !#lists.isEmpty(accreditamentoWrapper.accreditamento.pianoFormativo.eventi)}"> -->
+<!-- 						<th:block th:each="evento, row : ${accreditamentoWrapper.accreditamento.pianoFormativo.eventi}"> -->
+<!-- 							<h2 th:text="#{label.evento} + ': ' + ${evento.titolo}">label.componente_comitato</h2> -->
+<!-- 							<div th:unless="${row.last}" class="divider-dashed"></div> -->
+<!-- 							<div th:id="evento+${evento.id}+BlockValidate"  role="iterEventoValutazione" th:attr="data-valore-id=${evento.id}"></div> -->
+<!-- 						</th:block> -->
+<!-- 					</th:block> -->
 
-				</div>
+<!-- 				</div> -->
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
@@ -345,13 +346,13 @@
 					});
 
 					//ciclo sugli eventi del piano formativo grazie al campo data-valore-id precedentemente settato
-					$('div[role=iterEventoValutazione]').each(function(index) {
- 						url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/pianoFormativo/${accreditamentoWrapper.accreditamento.pianoFormativo?.id}/evento/|}]] + $(this).attr("data-valore-id") + "/validate";
-						$(this).load(url + ' #toValidateModal', function() {
-							initTable($(this).find('table'));
-						});
-					});
-
+					//TODO rimuovere se confermato non serve più
+// 					$('div[role=iterEventoValutazione]').each(function(index) {
+//  						url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/pianoFormativo/${accreditamentoWrapper.accreditamento.pianoFormativo?.id}/evento/|}]] + $(this).attr("data-valore-id") + "/validate";
+// 						$(this).load(url + ' #toValidateModal', function() {
+// 							initTable($(this).find('table'));
+// 						});
+// 					});
 				}
 
 			/*]]>*/
