--- a/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
@@ -36,15 +36,17 @@
 								<td th:if="${(showOnly or enableField) and !evento.new}">
 									<i class="fa table-icon fa-check green" th:title="#{label.inserito}"></i>
 								</td>
-								<td th:if="${valutabile and (accreditamentoWrapper.eventiStati[__${evento.id}__] == true)}">
-									<i class="fa table-icon fa-check green" th:title="#{label.valutato}"></i>
-								</td>
+								<!-- TODO togliere se non serve più -->
+<!-- 								<td th:if="${valutabile and (accreditamentoWrapper.eventiStati[__${evento.id}__] == true)}"> -->
+<!-- 									<i class="fa table-icon fa-check green" th:title="#{label.valutato}"></i> -->
+<!-- 								</td> -->
 								<td th:if="${(showOnly or enableField) and evento.new}">
 									<i class="fa table-icon fa-remove red" th:title="#{label.non_inserito}"></i>
 								</td>
-								<td th:if="${valutabile and (accreditamentoWrapper.eventiStati[__${evento.id}__] == false)}">
-									<i class="fa table-icon fa-remove red" th:title="#{label.non_valutato}"></i>
-								</td>
+								<!-- TODO togliere se non serve più -->
+<!-- 								<td th:if="${valutabile and (accreditamentoWrapper.eventiStati[__${evento.id}__] == false)}"> -->
+<!-- 									<i class="fa table-icon fa-remove red" th:title="#{label.non_valutato}"></i> -->
+<!-- 								</td> -->
 							</th:block>
 							<th:block th:if="${hasActionButtons}">
 								<td th:if="${editabile}">
@@ -56,9 +58,10 @@
 										<a th:if="${evento.new or (idIEditabili == null and !editabileFull) or (idEditabili != null and #lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(idEditabili, evento.id,'EVENTO_PIANO_FORMATIVO')))}" class="btn btn-primary btn-table double disabled"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
 									</span>
 								</td>
-								<td th:if="${valutabile}">
-									<a th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a>
-								</td>
+								<!-- TODO togliere se non serve più -->
+<!-- 								<td th:if="${valutabile}"> -->
+<!-- 									<a th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/validate|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${accreditamentoWrapper.canValutaDomanda ? 'fa-pencil': 'fa-eye'}"></i> <span th:text="${accreditamentoWrapper.canValutaDomanda} ? #{label.valuta} : #{label.mostra}">Valuta/Mostra</span></a> -->
+<!-- 								</td> -->
 								<td th:if="${enableField}">
 									<a th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/enableField|}" class="btn btn-primary btn-table single"><i class="fa" th:classappend="${'fa-pencil'}"></i> <span th:text="#{label.abilita_campi}">Abilita campi</span></a>
 								</td>
